project(engine)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "abstractMarkerSystem.cpp"
    "abstractPathRater.cpp"
    "allocatedBehaviorGraphOutput.cpp"
    "apexDebugVisualizer.cpp"
    "appearanceComponentModifier.cpp"
    "attachmentUtils.cpp"
    "baseEngineInit.cpp"
    "behaviorNodeParentChild.cpp"
    "behaviorGraphIk2BakerNode.cpp"
    "behaviorGraphMimicsBoneAnimationNode.cpp"
    "Behavior/SharedHeaders/enumSide.cpp"
    "cameraFadeoutHelper.cpp"
    "cameraOrientedComponent.cpp"
    "collisionCacheBuilder.cpp"
    "collisionCacheAsyncReader.cpp"
    "collisionCacheDataFormat.cpp"
    "collisionCacheOptimizer.cpp"
    "collisionCachePreloadedData.cpp"
    "collisionCacheReadOnly.cpp"
    "commonConfigs.cpp"
    "componentTickManager.cpp"
    "containerManager.cpp"
    "cookedMeshEntity.cpp"
    "cookedSpeeches.cpp"
    "cookedStrings.cpp"
    "curveEntitySpawner.cpp"
    "debugPageTriggers2.cpp"
    "debugPageWorld.cpp"
    "debugServerInternalCommands.cpp"
    "debugServerManager.cpp"
    "debugServerInternalPlugin.cpp"
    "dependencyLoaderSwf.cpp"
    "destructionComponent.cpp"
    "dropPhysicsComponentModifier.cpp"
    "hwCursorManager.cpp"
    "hairworksHelpers.cpp"
    "inGameConfigBasicImplementation.cpp"
    "inGameConfigGroupBasic.cpp"
    "ingameConfigParser.cpp"
    "inGameConfigVarBasic.cpp"
    "inputMappingInGameConfig.cpp"
    "inputMappingSaver.cpp"
    "entityExternalAppearance.cpp"
    "memoryMetricsUsageControlWalker.cpp"
    "MusicSystem.cpp"
    "pathlibMetalinkComponent.cpp"
    "pathlibLinksBuffer.cpp"
    "NewFX/Tracks/fxTrackItemSetDissolve.cpp"
    "pathlibNode.cpp"
    "entityTemplateModifier.cpp"
    "physicsDestructionResource.cpp"
    "physicsDestructionWrapper.cpp"
    "physicsDataProviders.cpp"
    "physicsTileWrapper.cpp"
    "scaleformMemoryDebug.cpp"
    "sectorPrefetchDataLoader.cpp"
    "sectorPrefetchGrid.cpp"
    "sectorPrefetchMemoryBuffer.cpp"
    "sectorPrefetchQuery.cpp"
    "sectorPrefetchRuntimeCache.cpp"
    "soundAmbientAreaGenerators.cpp"
    "soundWallaSystem.cpp"
    "triggerAreaEnvironmentVisibilityComponent.cpp"
    "traceTool.cpp"
    "triggerAreaExpansionPackComponent.cpp"
    "videoDebugHud.cpp"
    "debugWindowFileLoadingStats.cpp"
    "debugWindowFrameStats.cpp"
    "debugWindowInGameConfig.cpp"
    "debugWindowMemoryBudgets.cpp"
    "debugWindowMemoryClassPanel.cpp"
    "debugWindowMemoryHistogram.cpp"
    "debugWindowMemoryHistoryViewer.cpp"
    "debugWindowPhysicsArea.cpp"
    "debugWindowStreamingInstaller.cpp"
    "debugWindowProfilerSettings.cpp"
    "debugWindowTelemetryTags.cpp"
    "debugWindowMemoryObjects.cpp"
    "debugWindowTerrain.cpp"
    "debugWindowWorldStreaming.cpp"
    "decalEmitter.cpp"
    "dynamicFoliageComponent.cpp"
    "entityDismemberment.cpp"
    "entityStreaming.cpp"
    "entityStreamingProxy.cpp"
    "entityTemplateCookedEffect.cpp"
    "entityTemplatePreloadedEffects.cpp"
    "entityTickManager.cpp"
    "envProbeComponentCooking.cpp"
    "flashFontConfig.cpp"
    "flashRenderTarget.cpp"
    "flashRenderTargetScaleform.cpp"
    "foliageCellIterator.cpp"
    "foliageDynamicInstanceService.cpp"
    "foliageInstance.cpp"
    "fxTrackItemFlare.cpp"
    "gameSaveFileNoSeeks.cpp"
    "gameStreaming.cpp"
    "globalVisibilityId.cpp"
    "inGameConfig.cpp"
    "inGameConfigRefreshEvent.cpp"
    "inGameConfigSpecialization.cpp"
    "inputDeviceManager.cpp"
    "jobEffectPreloading.cpp"
    "grassCellMask.cpp"
    "grassOccurrenceMap.cpp"
    "layersEntityCompatibilityChecker.cpp"
    "loadingOverlay.cpp"
    "loadingScreen.cpp"
    "manualStreamingHelper.cpp"
    "materialCompiler.cpp"
    "mbParamEnvColorGroup.cpp"
    "memoryBudgetStorage.cpp"
    "memoryClassDebugColourPalette.cpp"
    "mergedMeshBuilder.cpp"
    "mergedMeshComponent.cpp"
    "mergedShadowMeshComponent.cpp"
    "mergedWorldGeometry.cpp"
    "mergedWorldGeometryBuilder.cpp"
    "mergedWorldGeometryEntity.cpp"
    "mergedWorldGeometryShadowData.cpp"
    "meshDataBuilder.cpp"
    "meshPacking.cpp"
    "meshSkeletonMappingCache.cpp"
    "nodeHelpers.cpp"
    "occlusionSystem.cpp"
    "overrideStreamingDistanceComponent.cpp"
    "particleModificatorAlphaByDistance.cpp"
    "pathlibCentralNodeFinder.cpp"
    "pathlibCollectCollisionPointsSpatialQuery.cpp"
    "pathlibConnectorsBin.cpp"
    "pathlibCookerData.cpp"
    "pathlibDetailedSurfaceData.cpp"
    "pathlibHLGraphBase.cpp"
    "pathlibHLNode.cpp"
    "pathlibHLSubGraph.cpp"
    "pathlibNavmeshAreaProcessing.cpp"
    "pathlibNodeFinder.cpp"
    "pathlibHLGraph.cpp"
    "pathlibNodeSetRequestsList.cpp"
    "pathlibObstacleDetour.cpp"
    "pathlibObstaclesGroup.cpp"
    "pathlibObstacleSimplificationProcessing.cpp"
    "pathlibReachabilityQueryTask.cpp"
    "pathlibRoughtTerrainComponent.cpp"
    "pathlibRoughTerrainMap.cpp"
    "pathlibSearchData.cpp"
    "pathlibSettings.cpp"
    "pathlibSpecialZoneMap.cpp"
    "pathlibTaskImmediateObstacle.cpp"
    "pathlibTaskLayersVisibilityProcessing.cpp"
    "pathlibTaskManager.cpp"
    "pathlibTerrainHeight.cpp"
    "pathlibWalkableSpotQueryTask.cpp"
    "pathlibTaskObstacleProcessing.cpp"
    "pathlibTaskPlotPath.cpp"
    "pathlibTaskPostStreaming.cpp"
    "pathlibWalkableSpotQueryRequest.cpp"
    "pathlibWorldLayersMapping.cpp"
    "physicsBatchQueryManager.cpp"
    "poseBlock.cpp"
    "poseHandle.cpp"
    "poseProvider.cpp"
    "poseProviderFactory.cpp"
    "poseProviderRepository.cpp"
    "redGuiEmbeddedResources.cpp"
    "pathlibTaskUnloadStreamingItems.cpp"
    "redGuiGraphBase.cpp"
    "redGuiClipmapVisualizer.cpp"
    "redGuiHistogram.cpp"
    "redGuiLoginBox.cpp"
    "redGuiModalWindow.cpp"
    "remoteConnection.cpp"
    "renderGameplayRenderTargetInterface.cpp"
    "renderVisibilityExclusion.cpp"
    "renderScaleformCommands.cpp"
    "renderTextureStreamRequest.cpp"
    "saveServer.cpp"
    "scaleformExternalInterface.cpp"
    "scaleformFile.cpp"
    "scaleformLoader.cpp"
    "scaleformLog.cpp"
    "scaleformMemory.cpp"
    "scaleformTaskManager.cpp"
    "scaleformTextureCacheQuee.cpp"
    "scaleformTranslator.cpp"
    "scaleformUserEvent.cpp"
    "scriptInvoker.cpp"
    "scaleable.cpp"
    "minimapGenerator.cpp"
    "sectorData.cpp"
    "sectorDataBuilder.cpp"
    "sectorDataEntityPool.cpp"
    "sectorDataGenericRuntime.cpp"
    "sectorDataMerged.cpp"
    "sectorDataObjects.cpp"
    "sectorDataParticlesRuntime.cpp"
    "sectorDataResourceLoader.cpp"
    "sectorDataRigidMeshRuntime.cpp"
    "sectorDataStreaming.cpp"
    "sectorDataStreamingContext.cpp"
    "sectorDataStreamingThread.cpp"
    "shaderCacheBuilder.cpp"
    "shaderCacheData.cpp"
    "shaderCacheManager.cpp"
    "shaderCacheReadonly.cpp"
    "shadowMeshGenerator.cpp"
    "simpleBuoyancyComponent.cpp"
    "skeletonSkeletonMappingCache.cpp"
    "soundCacheDataFormat.cpp"
    "soundSettings.cpp"
    "animatedComponentAnimatedAttachement.cpp"
    "animatedComponentAnimInterface.cpp"
    "animatedComponentMovement.cpp"
    "animatedComponentMulti.cpp"
    "animatedComponentScripts.cpp"
    "animatedEntity.cpp"
    "animationBuffer.cpp"
    "animationBufferBitwiseCompressed.cpp"
    "animationBufferMultipart.cpp"
    "animationBufferUncompressed.cpp"
    "animationTrajectoryPlayer_Blend2.cpp"
    "animationCache2.cpp"
    "animationCacheCooker.cpp"
    "animationCompression.cpp"
    "animationController.cpp"
    "animationEngine.cpp"
    "animationGameParams.cpp"
    "animationJobs.cpp"
    "animationLogger.cpp"
    "animationManager.cpp"
    "animationSelectors.cpp"
    "animationStreamingJob.cpp"
    "animationTrajectory.cpp"
    "animationTrajectoryPlayer.cpp"
    "animationPlayerTimeController.cpp"
    "animationTrajectoryPlayer_Trajectory.cpp"
    "animationTrajectorySync.cpp"
    "animationTrajectoryTrackParam.cpp"
    "animationTrajectoryVisualizer.cpp"
    "animBehaviorsAndSetsParam.cpp"
    "animDangleBufferComponent.cpp"
    "animDangleComponent.cpp"
    "animHingeConstraint.cpp"
    "animPointCloudLookAtParam.cpp"
    "animPoseConstraint.cpp"
    "animSkeletalDangleConstraint.cpp"
    "animSkeletalMultiDangleConstraint.cpp"
    "animSkeletalMultiDangleConstraint_painter.cpp"
    "animSlotsParam.cpp"
    "apexClothResource.cpp"
    "apexClothWrapper.cpp"
    "apexDestructionResource.cpp"
    "apexDestructionWrapper.cpp"
    "apexResource.cpp"
    "apexWrapperBase.cpp"
    "appearanceComponent.cpp"
    "areaTestComponent.cpp"
    "asyncAnimTickManager.cpp"
    "baseTree.cpp"
    "behaviorGraph2DVariableNode.cpp"
    "behaviorGraphAlignToGroundNode.cpp"
    "behaviorGraphAnimationAdditiveSlot.cpp"
    "behaviorGraphAnimationEventNode.cpp"
    "behaviorGraphAnimationExtNode.cpp"
    "behaviorGraphAnimationLipsyncSlot.cpp"
    "behaviorGraphAnimationManualSlot.cpp"
    "behaviorGraphAnimationMixerSlot.cpp"
    "behaviorGraphBlend3Node.cpp"
    "behaviorGraphChooseRecoverFromRagdollAnimNode.cpp"
    "behaviorGraphFootLockNode.cpp"
    "behaviorGraphInternalVariableNode.cpp"
    "behaviorGraphInternalVectorVariableNode.cpp"
    "behaviorGraphJoinNode.cpp"
    "behaviorGraphLookAtUsingAnimationsNode.cpp"
    "behaviorGraphSynchronizeAnimationsNode.cpp"
    "behaviorGraphMimicLipsync.cpp"
    "behaviorGraphMimicManualSlot.cpp"
    "behaviorGraphMimicPoseNodes.cpp"
    "behaviorGraphNodeControlRig.cpp"
    "behaviorGraphPointCloudLookAtNode.cpp"
    "behaviorGraphPointerStateNode.cpp"
    "behaviorGraphRecentlyUsedAnimsStateNode.cpp"
    "behaviorGraphRetargetCharacterNode.cpp"
    "behaviorGraphSetInternalVariableFloatInOutNode.cpp"
    "behaviorGraphSetInternalVariableNode.cpp"
    "behaviorGraphSimplePlaybackUtils.cpp"
    "behaviorGraphSyncOverride.cpp"
    "behaviorGraphTransitionMatchToPose.cpp"
    "behaviorGraphVariableBaseNode.cpp"
    "behaviorGraphVectorVariableBaseNode.cpp"
    "behaviorIkApplyRotation.cpp"
    "behaviorIkTwoBones.cpp"
    "bezierComponent.cpp"
    "Bezier_Polynomials.cpp"
    "breastConstraint.cpp"
    "cameraAttractor.cpp"
    "cameraDirector.cpp"
    "cameraPredictor.cpp"
    "behaviorConstraintNodeBoneInterpolate.cpp"
    "characterControllerManager.cpp"
    "characterControllerParam.cpp"
    "characterEntityTemplate.cpp"
    "clipMap.cpp"
    "clothAttachment.cpp"
    "clothComponent.cpp"
    "collarConstraint.cpp"
    "collisionShapeBox.cpp"
    "collisionShapeBuilder.cpp"
    "collisionShapeCapsule.cpp"
    "collisionShapeSphere.cpp"
    "commentGraphBlock.cpp"
    "compressedRotation.cpp"
    "compressedTranslation.cpp"
    "controlRig.cpp"
    "controlRigAlgorithms.cpp"
    "controlRigBehaviorNodeController.cpp"
    "controlRigDefinition.cpp"
    "controlRigPropertySet.cpp"
    "controlRigSolver.cpp"
    "controlRigUtils.cpp"
    "curveControlPointEntity.cpp"
    "curveEntity.cpp"
    "curveTangentControlPointEntity.cpp"
    "cutsceneEntity.cpp"
    "dangleComponent.cpp"
    "animDangleConstraint.cpp"
    "debugCommandBox.cpp"
    "debugChoice.cpp"
    "debugPageBgObjects.cpp"
    "debugPageDynamicAttributes.cpp"
    "debugPageEffects.cpp"
    "debugPageGameFrameBudget.cpp"
    "debugPageLoadedResources.cpp"
    "debugPageManagerBase.cpp"
    "debugPageManagerTabbed.cpp"
    "debugPagePhysics.cpp"
    "debugPageTaskManager.cpp"
    "debugPageVegetation.cpp"
    "debugPageVideos.cpp"
    "debugPageStartPage.cpp"
    "debugWindowAnimations.cpp"
    "debugWindowArrayMemory.cpp"
    "debugWindowCallstackProfiler.cpp"
    "debugWindowEnvironment.cpp"
    "debugWindowGameFrame.cpp"
    "debugWindowJobManager.cpp"
    "debugWindowLoadedResources.cpp"
    "debugWindowMemoryMetrics.cpp"
    "debugWindowPerformanceLog.cpp"
    "debugWindowPhysics.cpp"
    "debugWindowRenderingFlags.cpp"
    "debugWindowReviewMarkers.cpp"
    "debugWindowReviewMarkersAddMarker.cpp"
    "debugWindowReviewMarkersEditMarker.cpp"
    "debugWindowReviewMarkersFilterMarker.cpp"
    "debugWindowReviewMarkersShowMarker.cpp"
    "debugWindowScriptThreads.cpp"
    "debugWindowsManager.cpp"
    "debugWindowSound.cpp"
    "debugWindowTaskManager.cpp"
    "debugWindowTickManager.cpp"
    "debugWindowVegetation.cpp"
    "debugWindowUmbra.cpp"
    "decalComponent.cpp"
    "dependencyAttachment.cpp"
    "dismembermentComponent.cpp"
    "dressConstraint.cpp"
    "dropPhysicsComponent.cpp"
    "dynamicColliderComponent.cpp"
    "dyngConstraint.cpp"
    "dyngResource.cpp"
    "dyngSimulator.cpp"
    "dynamicDecal.cpp"
    "earingConstraint.cpp"
    "easingFunctions.cpp"
    "engineNames.cpp"
    "envProbeParams.cpp"
    "extAnimCutsceneEvent.cpp"
    "extAnimMorphEvent.cpp"
    "extAnimRaiseEventEvent.cpp"
    "flareParameters.cpp"
    "floatDamper.cpp"
    "foliageBroker.cpp"
    "foliageCell.cpp"
    "foliageCollisionHandler.cpp"
    "foliageEditionController.cpp"
    "foliageGrid.cpp"
    "foliageRenderCommandDispatcher.cpp"
    "foliageResource.cpp"
    "foliageResourceHandler.cpp"
    "foliageResourceLoader.cpp"
    "foliageScene.cpp"
    "fxSimpleSpawner.cpp"
    "gameplayEffectsComponent.cpp"
    "dimmerComponent.cpp"
    "gameUniverseStorage.cpp"
    "gestureSystem.cpp"
    "globalEventsManager.cpp"
    "gpuDataBuffer.cpp"
    "grassMask.cpp"
    "helpTextComponent.cpp"
    "hoodConstraint.cpp"
    "inputDeviceCommandBacklight.cpp"
    "inputDeviceCommandRumble.cpp"
    "inputDeviceCommandsManager.cpp"
    "integerVector.cpp"
    "lensFlareSetupParameters.cpp"
    "memoryMetricsMemoryUsageControl.cpp"
    "meshChunk.cpp"
    "meshGcProxy.cpp"
    "meshTypeComponent.cpp"
    "meshVertex.cpp"
    "multiCurve.cpp"
    "particleInitializerCollisionSpawn.cpp"
    "pathlibAreaNavgraphs.cpp"
    "pathlibAreaProcessingJob.cpp"
    "pathlibAreaRes.cpp"
    "pathlibBundler.cpp"
    "pathlibComponent.cpp"
    "pathlibConfiguration.cpp"
    "pathlibMetalink.cpp"
    "pathlibNavmeshBorderAreaComponent.cpp"
    "pathlibNavmeshLegacy.cpp"
    "pathlibKDTree.cpp"
    "pathlibNavNode.cpp"
    "pathlibObstacleShape.cpp"
    "pathlibObstaclesMap.cpp"
    "pathlibResPtr.cpp"
    "pathlibStreamingItem.cpp"
    "pathlibStreamingJob.cpp"
    "pathlibTerrainFoliage.cpp"
    "pathlibTerrainSurfaceProcessing.cpp"
    "pathlibGenerationManagerBase.cpp"
    "performableAction.cpp"
    "physicsCharacterVirtualController.cpp"
    "propertyAnimationSet.cpp"
    "memoryMetricsPoolAreaControl.cpp"
    "randomGenerators.cpp"
    "redGuiAdvancedSlider.cpp"
    "redGuiAreaChart.cpp"
    "redGuiButton.cpp"
    "redGuiCheckBox.cpp"
    "redGuiComboBox.cpp"
    "redGuiControl.cpp"
    "redGuiControlInput.cpp"
    "redGuiControlSkin.cpp"
    "redGuiDefaultTheme.cpp"
    "redGuiDesktop.cpp"
    "redGuiEventPackage.cpp"
    "redGuiFontManager.cpp"
    "redGuiGeneralLayer.cpp"
    "redGuiGradientTheme.cpp"
    "redGuiGraphicContext.cpp"
    "redGuiGridLayout.cpp"
    "redGuiGroupBox.cpp"
    "redGuiImage.cpp"
    "redGuiInputManager.cpp"
    "redGuiLabel.cpp"
    "redGuiLayerItem.cpp"
    "redGuiLayerManager.cpp"
    "redGuiList.cpp"
    "redGuiListItem.cpp"
    "redGuiManager.cpp"
    "redGuiMenu.cpp"
    "redGuiMenuBar.cpp"
    "redGuiMenuItem.cpp"
    "redGuiMessageBox.cpp"
    "redGuiOccupancyChart.cpp"
    "redGuiOpenFileDialog.cpp"
    "redGuiPanel.cpp"
    "redGuiProgressBar.cpp"
    "redGuiRenderManager.cpp"
    "redGuiSaveFileDialog.cpp"
    "redGuiScrollBar.cpp"
    "redGuiScrollPanel.cpp"
    "redGuiSeparator.cpp"
    "redGuiSlider.cpp"
    "redGuiSpin.cpp"
    "redGuiTab.cpp"
    "redGuiTextBox.cpp"
    "redGuiThemeManager.cpp"
    "redGuiTimeline.cpp"
    "redGuiTimelineChart.cpp"
    "redGuiTimelineEvent.cpp"
    "redGuiToolTipManager.cpp"
    "redGuiTreeNode.cpp"
    "redGuiTreeView.cpp"
    "redGuiUserData.cpp"
    "redGuiProgressBox.cpp"
    "redGuiWindow.cpp"
    "renderCommandInterface.cpp"
    "renderGameplayEffects.cpp"
    "scaleformTextureCacheImage.cpp"
    "scriptCompilationHelper.cpp"
    "negativeAreaComponent.cpp"
    "polygonTriangulation.cpp"
    "morphedMeshComponent.cpp"
    "morphedMeshManagerComponent.cpp"
    "shortestPathRater.cpp"
    "deniedAreaComponent.cpp"
    "dependencyLoaderSRT.cpp"
    "debugTextBox.cpp"
    "descriptionGraphBlock.cpp"
    "compressedFile.cpp"
    "EngineBezierTools.cpp"
    "entityMotion.cpp"
    "environmentDefinition.cpp"
    "envProbeComponent.cpp"
    "extAnimScriptEvent.cpp"
    "flashFunction.cpp"
    "flashFunctionScaleform.cpp"
    "flashMovie.cpp"
    "flashMovieScaleform.cpp"
    "flashPlayerScaleformInput.cpp"
    "flashPlayerScaleformViewport.cpp"
    "flashValueNull.cpp"
    "flashValueObject.cpp"
    "flashValueObjectScaleform.cpp"
    "flashValueScaleform.cpp"
    "flashValueStorage.cpp"
    "flashValueStorageScaleform.cpp"
    "furComponent.cpp"
    "furMeshResource.cpp"
    "fxPhysicalForce.cpp"
    "fxTrackItemEnvironmentModifier.cpp"
    "fxTrackItemForceFeedback.cpp"
    "fxTrackItemGlobalSpacePhysicalForce.cpp"
    "gameResource.cpp"
    "globalWater.cpp"
    "globalWaterUpdateParams.cpp"
    "graphHelperBlock.cpp"
    "flashPlayer.cpp"
    "inputListener.cpp"
    "inputUserConfig.cpp"
    "markersSystem.cpp"
    "materialSampler.cpp"
    "mimicComponent.cpp"
    "navigationObstacle.cpp"
    "networkedLogOutputDevice.cpp"
    "normalBlendAttachment.cpp"
    "normalBlendComponent.cpp"
    "normalBlendDataSource.cpp"
    "pathlibNodeSet.cpp"
    "poiDatabaseConnector.cpp"
    "poiSystem.cpp"
    "pathlibObstacleAsyncProcessing.cpp"
    "pathlibObstacleSpawnContext.cpp"
    "pathlibStreamingManager.cpp"
    "phantomAttachment.cpp"
    "pathlibNavmeshBinTree.cpp"
    "pathlibNavmeshGeneration.cpp"
    "flashPlayerScaleform.cpp"
    "heightmapUtils.cpp"
    "inputRecorder.cpp"
    "mbEncapsulatedGraph.cpp"
    "mbInput.cpp"
    "mbInterpolator.cpp"
    "mbOutput.cpp"
    "mbParamTextureArray.cpp"
    "meshCache.cpp"
    "meshCacheCooker.cpp"
    "meshTypeResource.cpp"
    "mimicFac.cpp"
    "pathlib.cpp"
    "pathlibAgent.cpp"
    "pathlibAreaDescription.cpp"
    "pathlibGraph.cpp"
    "pathlibInstanceMap.cpp"
    "pathlibNavgraph.cpp"
    "pathlibNavmesh.cpp"
    "pathlibNavmeshArea.cpp"
    "pathlibNavmeshComponent.cpp"
    "pathlibObstacle.cpp"
    "pathlibObstacleMapper.cpp"
    "pathlibSearchEngine.cpp"
    "pathlibGenerationManager.cpp"
    "pathlibTerrain.cpp"
    "pathlibTerrainInfo.cpp"
    "pathlibVisualizer.cpp"
    "pathlibWorld.cpp"
    "physicsCharacterWrapper.cpp"
    "poseBBoxGenerator.cpp"
    "animConstraintsParam.cpp"
    "animGlobalParam.cpp"
    "animMimicParam.cpp"
    "behaviorAnimationMultiplyEntity.cpp"
    "behaviorGraphSelfActStateMachine.cpp"
    "behaviorGraphStackSnapshot.cpp"
    "behaviorPoseConstraintNode.cpp"
    "bitmapTexture.cpp"
    "bitmapTextureHelpers.cpp"
    "boxComponent.cpp"
    "cacheBehaviorGraphOutput.cpp"
    "cubeTexture.cpp"
    "cutsceneActor.cpp"
    "cutsceneModifier.cpp"
    "debugAnimation.cpp"
    "debugPageGameplayConfig.cpp"
    "debugPageHavokMemory.cpp"
    "debugPageLanguagePacks.cpp"
    "debugPageActiveIslands.cpp"
    "debugPageTickManager.cpp"
    "debugPageUpdateTransform.cpp"
    "debugSlider.cpp"
    "debugStat.cpp"
    "dressMeshComponent.cpp"
    "effectDummyComponent.cpp"
    "effectEntity.cpp"
    "entityTemplate.cpp"
    "entityTemplateCook.cpp"
    "entityTemplateMerge.cpp"
    "entityTemplateParams.cpp"
    "extAnimCutsceneSoundEvent.cpp"
    "footstepData.cpp"
    "fxTrackItemDynamicLight.cpp"
    "fxWaterSpawner.cpp"
    "gameplayConfig.cpp"
    "gameSaveFile.cpp"
    "havokAnimationUtils.cpp"
    "immediateJobsCollector.cpp"
    "languagePack.cpp"
    "localizationCache.cpp"
    "motionExtraction.cpp"
    "motionExtractionCompression.cpp"
    "particleModificatorCollision.cpp"
    "persistentReference.cpp"
    "pose.cpp"
    "poseCompression.cpp"
    "posePool.cpp"
    "cookedAnimatedProp.cpp"
    "QuadraticBezier2.cpp"
    "QuadraticBezier_Segment2.cpp"
    "ragdollPhysX.cpp"
    "rawInputManager.cpp"
    "registryAccess.cpp"
    "renderVisibilityQuery.cpp"
    "reviewDatabaseConnector.cpp"
    "reviewSystem.cpp"
    "reviewTestTrackConnector.cpp"
    "scaleformSystem.cpp"
    "screenshotSystem.cpp"
    "scriptedDestroyableComponent.cpp"
    "scriptEngineAnimationNatives.cpp"
    "simplexTreeResource.cpp"
    "simplygonHelpers.cpp"
    "skeletalAnimatedComponent.cpp"
    "skeletalAnimationEntry.cpp"
    "skeletalAnimationImport.cpp"
    "skeletalAnimationStreaming.cpp"
    "skeletonProvider.cpp"
    "skeletonUtils.cpp"
    "skyboxSetupParameters.cpp"
    "softTriggerAreaComponent.cpp"
    "soundAdditionalListener.cpp"
    "soundEmitter.cpp"
    "soundEntityParam.cpp"
    "soundFileLoader.cpp"
    "soundListener.cpp"
    "sourceTextureData.cpp"
    "speedConfig.cpp"
    "staticShaderCache.cpp"
    "stickerDatabaseConnector.cpp"
    "stickersSystem.cpp"
    "streamingAreaComponent.cpp"
    "stripeComponent.cpp"
    "swarmRenderComponent.cpp"
    "swfResource.cpp"
    "swfTexture.cpp"
    "switchableFoliageComponent.cpp"
    "teleportDetectorData.cpp"
    "teleportDetector.cpp"
    "terrainTile.cpp"
    "terrainUtils.cpp"
    "testFramework.cpp"
    "texture.cpp"
    "textureArray.cpp"
    "textureBaker.cpp"
    "textureCache.cpp"
    "bitmapDataBuffer.cpp"
    "havokDataBuffer.cpp"
    "havokDataBufferParser.cpp"
    "mesh.cpp"
    "meshExtra.cpp"
    "collisionMesh.cpp"
    "collisionShape.cpp"
    "collisionShapeConvex.cpp"
    "collisionShapeTriMesh.cpp"
    "collisionCache.cpp"
    "dynamicLayer.cpp"
    "dynamicCollisionCollector.cpp"
    "entityHandle.cpp"
    "layer.cpp"
    "layerGroup.cpp"
    "layerInfo.cpp"
    "layerStorage.cpp"
    "persistentEntity.cpp"
    "timerKeyword.cpp"
    "timerManager.cpp"
    "umbraJobs.cpp"
    "umbraQuery.cpp"
    "umbraScene.cpp"
    "umbraStructures.cpp"
    "umbraTile.cpp"
    "areaConvex.cpp"
    "areaShapeBuilder.cpp"
    "triggerActivatorComponent.cpp"
    "triggerManagerImpl.cpp"
    "triggerMaskBuffer.cpp"
    "userProfile.cpp"
    "utils.cpp"
    "vectorDamper.cpp"
    "vegetationBrush.cpp"
    "videoPlayerBink.cpp"
    "videoSoundSystemDX8.cpp"
    "videoSoundSystemPS4.cpp"
    "videoSoundSystemXA2.cpp"
    "videoSubtitles.cpp"
    "virtualAnimation.cpp"
    "virtualAnimationMixer.cpp"
    "virtualSkeletalAnimation.cpp"
    "waterComponent.cpp"
    "springDampers.cpp"
    "weatherManager.cpp"
    "wetnessComponent.cpp"
    "windAreaComponent.cpp"
    "world.cpp"
    "worldDelayed.cpp"
    "worldLookup.cpp"
    "worldSceneDependencyInfo.cpp"
    "worldShowFlags.cpp"
    "worldStreaming.cpp"
    "streamingSectorData.cpp"
    "worldTick.cpp"
    "updateTransformManager.cpp"
    "selectionManager.cpp"
    "tickManager.cpp"
    "tagManager.cpp"
    "windParameters.cpp"
    "renderCamera.cpp"
    "renderCommandBuffer.cpp"
    "renderCommands.cpp"
    "renderer.cpp"
    "renderFence.cpp"
    "renderFragment.cpp"
    "renderFrame.cpp"
    "renderFrameInfo.cpp"
    "renderMemoryPages.cpp"
    "renderMemoryPool.cpp"
    "renderObject.cpp"
    "renderProxy.cpp"
    "renderResource.cpp"
    "renderSettings.cpp"
    "renderShadow.cpp"
    "renderTerrainModPreview.cpp"
    "renderThread.cpp"
    "textureGroup.cpp"
    "videoPlayer.cpp"
    "viewport.cpp"
    "viewportHook.cpp"
    "visualDebug.cpp"
    "phantomComponent.cpp"
    "rigidMeshComponent.cpp"
    "staticMeshComponent.cpp"
    "componentIterator.cpp"
    "entity.cpp"
    "entityAppearance.cpp"
    "entityColorVariant.cpp"
    "entityEffects.cpp"
    "entityGroup.cpp"
    "externalProxy.cpp"
    "jobSpawnEntity.cpp"
    "node.cpp"
    "boundedComponent.cpp"
    "component.cpp"
    "drawableComponent.cpp"
    "dummyComponent.cpp"
    "flareComponent.cpp"
    "meshComponent.cpp"
    "windowComponent.cpp"
    "slot.cpp"
    "lightComponent.cpp"
    "pointLightComponent.cpp"
    "spotLightComponent.cpp"
    "areaComponent.cpp"
    "pathComponent.cpp"
    "planarShapeComponent.cpp"
    "spriteComponent.cpp"
    "stickerComponent.cpp"
    "areaBSP.cpp"
    "animatedAttachment.cpp"
    "attachment.cpp"
    "hardAttachment.cpp"
    "meshSkinningAttachment.cpp"
    "skinningAttachment.cpp"
    "hitProxyId.cpp"
    "hitProxyMap.cpp"
    "hitProxyObject.cpp"
    "camera.cpp"
    "freeCamera.cpp"
    "staticCamera.cpp"
    "destructionSystemComponent.cpp"
    "animatedSkeleton.cpp"
    "animationEvent.cpp"
    "playedAnimation.cpp"
    "skeletalAnimation.cpp"
    "skeletalAnimationContainer.cpp"
    "skeletalAnimationSet.cpp"
    "skeleton.cpp"
    "skeletonMapper.cpp"
    "animatedComponent.cpp"
    "slotComponent.cpp"
    "skeletonBoneSlot.cpp"
    "extAnimBehaviorEvents.cpp"
    "extAnimDurationEvent.cpp"
    "extAnimEvent.cpp"
    "extAnimEventsFile.cpp"
    "extAnimExplorationEvent.cpp"
    "massSpringSolver.cpp"
    "animationsCache.cpp"
    "mimicFaces.cpp"
    "material.cpp"
    "materialDefinition.cpp"
    "materialCompilerDefines.cpp"
    "materialBlock.cpp"
    "materialBlockCompiler.cpp"
    "materialGraph.cpp"
    "materialInputBoolSocket.cpp"
    "materialInputCubeSocket.cpp"
    "materialInputSocket.cpp"
    "materialInputTextureSocket.cpp"
    "materialInstance.cpp"
    "materialOutputBoolSocket.cpp"
    "materialOutputCubeSocket.cpp"
    "materialOutputSocket.cpp"
    "materialOutputTextureSocket.cpp"
    "materialParameter.cpp"
    "materialParameterInstance.cpp"
    "materialRootBlock.cpp"
    "materialRootDecalBlock.cpp"
    "materialRootMultiPassLightingBlock.cpp"
    "mbParamColor.cpp"
    "mbParamCube.cpp"
    "mbParamEngineValue.cpp"
    "mbParamScalar.cpp"
    "mbParamTexture.cpp"
    "mbParamVector.cpp"
    "materialOverrideAttachment.cpp"
    "materialOverrideComponent.cpp"
    "materialOverrideProvider.cpp"
    "shaderCache.cpp"
    "fonts.cpp"
    "graphBaseItem.cpp"
    "graphBaseSocket.cpp"
    "graphBlock.cpp"
    "graphConnection.cpp"
    "graphConnectionClipboard.cpp"
    "graphConnectionRebuilder.cpp"
    "graphContainer.cpp"
    "graphSocket.cpp"
    "profilerOutput.cpp"
    "sceneBeamTree.cpp"
    "sceneGrid.cpp"
    "triggerAreaComponent.cpp"
    "decalSpawner.cpp"
    "particleComponent.cpp"
    "particleEmitter.cpp"
    "particleInitializer.cpp"
    "particleModificator.cpp"
    "particleModule.cpp"
    "particlePool.cpp"
    "particleSystem.cpp"
    "particleInitializerAlpha.cpp"
    "particleInitializerColor.cpp"
    "particleInitializerLifeTime.cpp"
    "particleInitializerPosition.cpp"
    "particleInitializerRandomFlip.cpp"
    "particleInitializerRotation.cpp"
    "particleInitializerRotation3D.cpp"
    "particleInitializerRotationRate.cpp"
    "particleInitializerRotationRate3D.cpp"
    "particleInitializerSize.cpp"
    "particleInitializerSize3D.cpp"
    "particleInitializerSpawnBox.cpp"
    "particleInitializerSpawnCircle.cpp"
    "particleInitializerSpawnSphere.cpp"
    "particleInitializerVelocity.cpp"
    "particleInitializerVelocityInherit.cpp"
    "particleInitializerVelocitySpread.cpp"
    "particleDrawer.cpp"
    "particleDrawerBeam.cpp"
    "particleDrawerFacingTrail.cpp"
    "particleDrawerMesh.cpp"
    "particleDrawerScreen.cpp"
    "particleDrawerTrail.cpp"
    "particleModificatorAcceleration.cpp"
    "particleModificatorAlphaOverEmitterLife.cpp"
    "particleModificatorAlphaOverLife.cpp"
    "particleModificatorColorOverLife.cpp"
    "particleModificatorRotation3DOverLive.cpp"
    "particleModificatorRotationOverLife.cpp"
    "particleModificatorRotationRate3DOverLife.cpp"
    "particleModificatorRotationRateOverLife.cpp"
    "particleModificatorSize3DOverLife.cpp"
    "particleModificatorSizeOverLife.cpp"
    "particleModificatorTarget.cpp"
    "particleModificatorTargetNode.cpp"
    "particleModificatorTextureAnimation.cpp"
    "particleModificatorVelocityOverLife.cpp"
    "particleModificatorVelocityTurbulize.cpp"
    "curve.cpp"
    "curveApproximator.cpp"
    "brushBuilder.cpp"
    "brushCompiledData.cpp"
    "brushComponent.cpp"
    "brushFace.cpp"
    "brushRenderData.cpp"
    "brushCSG.cpp"
    "localBSP.cpp"
    "soundAmbientManager.cpp"
    "soundSystem.cpp"
    "speechBuffer.cpp"
    "scriptSoundSystem.cpp"
    "soundAmbientAreaComponent.cpp"
    "soundAmbientEmitter.cpp"
    "inputKeys.cpp"
    "inputManager.cpp"
    "cameraComponent.cpp"
    "game.cpp"
    "gameSaveManager.cpp"
    "gameStartStop.cpp"
    "idTag.cpp"
    "idTagManager.cpp"
    "gameTime.cpp"
    "gameTimeInterval.cpp"
    "gameTimeManager.cpp"
    "scriptTimeEvent.cpp"
    "gameSession.cpp"
    "cutscene.cpp"
    "cutsceneInstance.cpp"
    "extAnimCutsceneActorEffect.cpp"
    "extAnimCutsceneBodyPartEvent.cpp"
    "extAnimCutsceneDialogEvent.cpp"
    "extAnimCutsceneEffectEvent.cpp"
    "extAnimCutsceneEnvironmentEvent.cpp"
    "extAnimCutsceneFadeEvent.cpp"
    "evaluator.cpp"
    "evaluatorColor.cpp"
    "evaluatorFloat.cpp"
    "evaluatorVector.cpp"
    "debugConsole.cpp"
    "debugMessage.cpp"
    "fxBase.cpp"
    "fxDefinition.cpp"
    "fxState.cpp"
    "fxTrack.cpp"
    "fxTrackGroup.cpp"
    "fxTrackItem.cpp"
    "fxTrackItemBrightnessTint.cpp"
    "fxTrackItemCameraShake.cpp"
    "fxTrackItemCurveBase.cpp"
    "fxTrackItemDisableHDRAdaptation.cpp"
    "fxTrackItemFullscreenBlur.cpp"
    "fxTrackItemMaterialOverride.cpp"
    "fxTrackItemMovement.cpp"
    "fxTrackItemParameterColor.cpp"
    "fxTrackItemParameterFloat.cpp"
    "fxTrackItemParticles.cpp"
    "fxTrackItemPause.cpp"
    "fxTrackItemRadialBlur.cpp"
    "fxTrackItemSoundEvent.cpp"
    "effectDummyPoint.cpp"
    "fxSpawner.cpp"
    "fxSpawnerComponent.cpp"
    "behaviorEvent.cpp"
    "behaviorGraph.cpp"
    "behaviorGraphContainerNode.cpp"
    "behaviorGraphContext.cpp"
    "behaviorGraphInstance.cpp"
    "behaviorGraphNode.cpp"
    "behaviorGraphNotifier.cpp"
    "behaviorGraphOutput.cpp"
    "behaviorGraphSocket.cpp"
    "behaviorGraphStack.cpp"
    "behaviorGraphValueNode.cpp"
    "behaviorIncludes.cpp"
    "behaviorVariable.cpp"
    "behaviorGraphAdjustDirectionNode.cpp"
    "behaviorGraphAnimationNode.cpp"
    "behaviorGraphAnimationSwitchNode.cpp"
    "behaviorGraphAnimEventTrackNode.cpp"
    "behaviorGraphBlendAdditive.cpp"
    "behaviorGraphBlendMultipleNode.cpp"
    "behaviorGraphBlendNode.cpp"
    "behaviorGraphBlendOverride.cpp"
    "behaviorGraphBlockEventNode.cpp"
    "behaviorGraphCameraCollisionsNode.cpp"
    "behaviorGraphCameraControllerNode.cpp"
    "behaviorGraphCharacterRotationNode.cpp"
    "behaviorGraphComparatorNode.cpp"
    "behaviorGraphCurveDampValueNode.cpp"
    "behaviorGraphCutsceneNode.cpp"
    "behaviorGraphDampValueNode.cpp"
    "behaviorGraphDampVectorValueNode.cpp"
    "behaviorGraphEngineValueNode.cpp"
    "behaviorGraphFilterNode.cpp"
    "behaviorGraphGetBoneTransformNode.cpp"
    "behaviorGraphGetCustomTrackNode.cpp"
    "behaviorGraphHeadingNode.cpp"
    "behaviorGraphMath.cpp"
    "behaviorGraphMemoryNode.cpp"
    "behaviorGraphMotionExBlend.cpp"
    "behaviorGraphParentInputNode.cpp"
    "behaviorGraphParentValueInputNode.cpp"
    "behaviorGraphParentVectorValueInputNode.cpp"
    "behaviorGraphPivotRotationNode.cpp"
    "behaviorGraphRandomNode.cpp"
    "behaviorGraphRandomSelectNode.cpp"
    "behaviorGraphRotateBone.cpp"
    "behaviorGraphRotationController.cpp"
    "behaviorGraphScriptNode.cpp"
    "behaviorGraphSpeedModulationNode.cpp"
    "behaviorGraphStage.cpp"
    "behaviorGraphTopLevelNode.cpp"
    "behaviorGraphTranslateBone.cpp"
    "behaviorGraphTranslationController.cpp"
    "behaviorGraphVariableNode.cpp"
    "behaviorGraphVectorVariableNode.cpp"
    "behaviorGraphComboNode.cpp"
    "behaviorGraphFrozenStateNode.cpp"
    "behaviorGraphStartingStateNode.cpp"
    "behaviorGraphStateMachine.cpp"
    "behaviorGraphStateNode.cpp"
    "behaviorGraphTransitionBlend.cpp"
    "behaviorGraphTransitionForce.cpp"
    "behaviorGraphTransitionNode.cpp"
    "behaviorGraphMimicConverter.cpp"
    "behaviorGraphMimicNodes.cpp"
    "behaviorGraphMimicsAnimationNode.cpp"
    "behaviorGraphAnimationBlendSlotNode.cpp"
    "behaviorGraphAnimationSlotNode.cpp"
    "behaviorGraphPoseSlotNode.cpp"
    "behaviorGraphFlowNode.cpp"
    "behaviorGraphOutputNode.cpp"
    "behaviorConstraintCameraDialog.cpp"
    "behaviorConstraintCameraFocus.cpp"
    "behaviorConstraintNode.cpp"
    "behaviorConstraintNodeCameraLookat.cpp"
    "behaviorConstraintNodeChain.cpp"
    "behaviorConstraintNodeLookAt.cpp"
    "behaviorConstraintObject.cpp"
    "behaviorConstraintParentAlignNode.cpp"
    "behaviorGraphLookAtSystemNode.cpp"
    "behaviorConstraintNodeRoll.cpp"
    "behaviorIkSolverChain.cpp"
    "behaviorIkSolverLookAt.cpp"
    "behaviorIkSolverMimicLookAt.cpp"
    "behaviorGraphActorTilt.cpp"
    "characterConstraint.cpp"
    "areaTree.cpp"
    "environmentManager.cpp"
    "globalLightingTrajectory.cpp"
    "environmentAreaParams.cpp"
    "environmentGameParams.cpp"
    "environmentComponentArea.cpp"
    "daycycleGraphicsEntity.cpp"
    "skyTransformComponent.cpp"
    "skyTransformEntity.cpp"
    "localizationManager.cpp"
    "localizedContent.cpp"
    "localizedStringsWithKeysCache.cpp"
    "cookedbinStringDBDataAccess.cpp"
    "sqlStringDBDataAccess.cpp"
    "debugCheckBox.cpp"
    "debugCounter.cpp"
    "debugPage.cpp"
    "debugPageAnimations.cpp"
    "debugPageAsyncLoader.cpp"
    "debugPageBudget.cpp"
    "debugPageEnvironments.cpp"
    "debugPageJobManager.cpp"
    "debugPagePerformanceLog.cpp"
    "debugPageProfilers.cpp"
    "debugPageScriptThreads.cpp"
    "debugPageShowFlags.cpp"
    "baseEngine.cpp"
    "build.cpp"
    "engineClasses.cpp"
    "envParameters.cpp"
    "meshImpostor.cpp"
    "debugWindowResourceMonitor.cpp"
)

add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_SOURCE_DIR}/dev/external/recast/Recast/Include
    ${CMAKE_SOURCE_DIR}/dev/external/dxsdk\(June2010\)/Include
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Src
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Include
    ${CMAKE_SOURCE_DIR}/dev/external/hk650r1/Source
    ${CMAKE_SOURCE_DIR}/dev/external/wwise/include
    ${CMAKE_SOURCE_DIR}/dev/external/freetype/include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/characterkinematic
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/common
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/cooking
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/extensions
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/foundation
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/geometry
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/gpu
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/physxvisualdebuggersdk
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/pxtask
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/framework/public/
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/framework/public/PhysX3/
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/module/destructible/public
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/NxParameterized/public
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/shared/external/include
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/public
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/module/clothing/public
    ${CMAKE_SOURCE_DIR}/dev/external/umbra3.3.13-change-26-2826-2/interface
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Source
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Source/foundation/include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Source/Common/src
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/module/legacy/public
    ${CMAKE_SOURCE_DIR}/dev/external/speedtree/Include
    ${CMAKE_SOURCE_DIR}/dev/external/Ansel/include
)

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
